<?php

namespace Digitick\Foundation\Collection;


/**
 * Class BaseObjectSet
 * @package Digitick\Foundation\Collection
 */
class BaseObjectSet extends AbstractObjectSet
{
}
